Compilador Nosotros v1/y.output
   0  $accept : programa $end

   1  programa : lista_declaraciones

   2  lista_declaraciones : lista_declaraciones declaracion
   3                      | declaracion

   4  declaracion : declaracion_variables
   5              | declaracion_funcion

   6  declaracion_variables : tipo lista_variables ';'

   7  lista_variables : lista_variables ',' lista
   8                  | lista

   9  lista : ID
  10        | ID '[' ENTERO ']'

  11  tipo : INT
  12       | FLOAT
  13       | DOUBLE
  14       | CHAR
  15       | VOID
  16       | tipo_struct

  17  tipo_struct : STRUCT ID '{' cuerpo_struct '}'
  18              | STRUCT '{' cuerpo_struct '}'
  19              | STRUCT ID

  20  cuerpo_struct : cuerpo_struct declaracion_variables
  21                | declaracion_variables

  22  declaracion_funcion : tipo ID '(' parametros ')' bloque

  23  parametros : lista_parametros
  24             | VOID

  25  lista_parametros : lista_parametros ',' parametro
  26                   | parametro

  27  parametro : tipo ID '[' ']'
  28            | tipo ID

  29  bloque : '{' declaraciones_locales lista_sentencias '}'

  30  declaraciones_locales : declaraciones_locales declaracion_variables
  31                        |

  32  lista_sentencias : lista_sentencias sentencia
  33                   |

  34  sentencia : sentencia_exp
  35            | sentencia_if
  36            | sentencia_while
  37            | sentencia_do
  38            | sentencia_switch
  39            | sentencia_for
  40            | sentencia_break
  41            | sentencia_return
  42            | bloque
  43            | sentencia_imprime
  44            | sentencia_lee

  45  sentencia_exp : expresion ';'
  46                |

  47  sentencia_if : IF '(' expresion ')' sentencia sentencia_else

  48  sentencia_else : ELSE sentencia
  49                 | ';'

  50  sentencia_while : WHILE '(' expresion ')' sentencia

  51  sentencia_do : DO sentencia WHILE '(' expresion ')'
  52               | ';'

  53  sentencia_switch : SWITCH '(' ID ')' '{' lista_casos case_default '}'

  54  lista_casos : lista_casos sentencia_case
  55              | sentencia_case

  56  sentencia_case : CASE ENTERO ':' sentencia sentencia_break

  57  case_default : DEFAULT ':' sentencia sentencia_break
  58               |

  59  sentencia_for : FOR '(' expresion ';' expresion ';' sentencia_incremento ')' sentencia

  60  sentencia_break : BREAK ';'

  61  sentencia_incremento : ID "++"
  62                       | ID "--"

  63  sentencia_imprime : PRINT '(' expresion ')' ';'

  64  sentencia_lee : SCAN '(' ID ')' ';'

  65  sentencia_return : RETURN ';'
  66                   | RETURN expresion ';'

  67  expresion : variable operador_asignacion expresion
  68            | expresion_simple

  69  operador_asignacion : '='
  70                      | "+="
  71                      | "-="
  72                      | "*="
  73                      | "/="
  74                      | "%="

  75  variable : ID
  76           | ID '[' expresion ']'

  77  expresion_simple : expresion_simple operador_relacional operando
  78                   | expresion_simple operador_logico operando
  79                   | operando

  80  operador_logico : "&&"
  81                  | "||"

  82  operador_relacional : "<="
  83                      | ">="
  84                      | '<'
  85                      | '>'
  86                      | "=="
  87                      | "!="

  88  operando : operando operador_adicion termino
  89           | termino

  90  operador_adicion : '+'
  91                   | '-'

  92  termino : termino operador_mul factor
  93          | factor

  94  operador_mul : '*'
  95               | '/'
  96               | '%'

  97  factor : variable
  98         | llamada
  99         | '(' expresion ')'
 100         | ENTERO
 101         | FLOAT
 102         | CARACTER
 103         | CADENA
 104         | DOUBLE
 105         | '!' expresion
 106         | '-' expresion

 107  llamada : ID '(' argumentos ')'

 108  argumentos : lista_argumentos
 109             |

 110  lista_argumentos : lista_argumentos ',' expresion
 111                   | expresion

state 0
	$accept : . programa $end  (0)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	programa  goto 7
	lista_declaraciones  goto 8
	declaracion  goto 9
	declaracion_variables  goto 10
	declaracion_funcion  goto 11
	tipo  goto 12
	tipo_struct  goto 13


state 1
	tipo : INT .  (11)

	.  reduce 11


state 2
	tipo : FLOAT .  (12)

	.  reduce 12


state 3
	tipo : CHAR .  (14)

	.  reduce 14


state 4
	tipo : DOUBLE .  (13)

	.  reduce 13


state 5
	tipo : VOID .  (15)

	.  reduce 15


state 6
	tipo_struct : STRUCT . ID '{' cuerpo_struct '}'  (17)
	tipo_struct : STRUCT . '{' cuerpo_struct '}'  (18)
	tipo_struct : STRUCT . ID  (19)

	ID  shift 14
	'{'  shift 15
	.  error


state 7
	$accept : programa . $end  (0)

	$end  accept


state 8
	programa : lista_declaraciones .  (1)
	lista_declaraciones : lista_declaraciones . declaracion  (2)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	$end  reduce 1

	declaracion  goto 16
	declaracion_variables  goto 10
	declaracion_funcion  goto 11
	tipo  goto 12
	tipo_struct  goto 13


state 9
	lista_declaraciones : declaracion .  (3)

	.  reduce 3


state 10
	declaracion : declaracion_variables .  (4)

	.  reduce 4


state 11
	declaracion : declaracion_funcion .  (5)

	.  reduce 5


state 12
	declaracion_variables : tipo . lista_variables ';'  (6)
	declaracion_funcion : tipo . ID '(' parametros ')' bloque  (22)

	ID  shift 17
	.  error

	lista_variables  goto 18
	lista  goto 19


state 13
	tipo : tipo_struct .  (16)

	.  reduce 16


state 14
	tipo_struct : STRUCT ID . '{' cuerpo_struct '}'  (17)
	tipo_struct : STRUCT ID .  (19)

	'{'  shift 20
	ID  reduce 19


state 15
	tipo_struct : STRUCT '{' . cuerpo_struct '}'  (18)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	declaracion_variables  goto 21
	tipo  goto 22
	tipo_struct  goto 13
	cuerpo_struct  goto 23


state 16
	lista_declaraciones : lista_declaraciones declaracion .  (2)

	.  reduce 2


state 17
	lista : ID .  (9)
	lista : ID . '[' ENTERO ']'  (10)
	declaracion_funcion : tipo ID . '(' parametros ')' bloque  (22)

	'('  shift 24
	'['  shift 25
	';'  reduce 9
	','  reduce 9


state 18
	declaracion_variables : tipo lista_variables . ';'  (6)
	lista_variables : lista_variables . ',' lista  (7)

	';'  shift 26
	','  shift 27
	.  error


state 19
	lista_variables : lista .  (8)

	.  reduce 8


state 20
	tipo_struct : STRUCT ID '{' . cuerpo_struct '}'  (17)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	declaracion_variables  goto 21
	tipo  goto 22
	tipo_struct  goto 13
	cuerpo_struct  goto 28


state 21
	cuerpo_struct : declaracion_variables .  (21)

	.  reduce 21


state 22
	declaracion_variables : tipo . lista_variables ';'  (6)

	ID  shift 29
	.  error

	lista_variables  goto 18
	lista  goto 19


state 23
	tipo_struct : STRUCT '{' cuerpo_struct . '}'  (18)
	cuerpo_struct : cuerpo_struct . declaracion_variables  (20)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	'}'  shift 30
	.  error

	declaracion_variables  goto 31
	tipo  goto 22
	tipo_struct  goto 13


state 24
	declaracion_funcion : tipo ID '(' . parametros ')' bloque  (22)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 32
	STRUCT  shift 6
	.  error

	tipo  goto 33
	tipo_struct  goto 13
	parametros  goto 34
	lista_parametros  goto 35
	parametro  goto 36


state 25
	lista : ID '[' . ENTERO ']'  (10)

	ENTERO  shift 37
	.  error


state 26
	declaracion_variables : tipo lista_variables ';' .  (6)

	.  reduce 6


state 27
	lista_variables : lista_variables ',' . lista  (7)

	ID  shift 29
	.  error

	lista  goto 38


state 28
	tipo_struct : STRUCT ID '{' cuerpo_struct . '}'  (17)
	cuerpo_struct : cuerpo_struct . declaracion_variables  (20)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	'}'  shift 39
	.  error

	declaracion_variables  goto 31
	tipo  goto 22
	tipo_struct  goto 13


state 29
	lista : ID .  (9)
	lista : ID . '[' ENTERO ']'  (10)

	'['  shift 25
	';'  reduce 9
	','  reduce 9


state 30
	tipo_struct : STRUCT '{' cuerpo_struct '}' .  (18)

	.  reduce 18


state 31
	cuerpo_struct : cuerpo_struct declaracion_variables .  (20)

	.  reduce 20


state 32
	tipo : VOID .  (15)
	parametros : VOID .  (24)

	ID  reduce 15
	')'  reduce 24


state 33
	parametro : tipo . ID '[' ']'  (27)
	parametro : tipo . ID  (28)

	ID  shift 40
	.  error


state 34
	declaracion_funcion : tipo ID '(' parametros . ')' bloque  (22)

	')'  shift 41
	.  error


state 35
	parametros : lista_parametros .  (23)
	lista_parametros : lista_parametros . ',' parametro  (25)

	','  shift 42
	')'  reduce 23


state 36
	lista_parametros : parametro .  (26)

	.  reduce 26


state 37
	lista : ID '[' ENTERO . ']'  (10)

	']'  shift 43
	.  error


state 38
	lista_variables : lista_variables ',' lista .  (7)

	.  reduce 7


state 39
	tipo_struct : STRUCT ID '{' cuerpo_struct '}' .  (17)

	.  reduce 17


state 40
	parametro : tipo ID . '[' ']'  (27)
	parametro : tipo ID .  (28)

	'['  shift 44
	')'  reduce 28
	','  reduce 28


state 41
	declaracion_funcion : tipo ID '(' parametros ')' . bloque  (22)

	'{'  shift 45
	.  error

	bloque  goto 46


state 42
	lista_parametros : lista_parametros ',' . parametro  (25)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	.  error

	tipo  goto 33
	tipo_struct  goto 13
	parametro  goto 47


state 43
	lista : ID '[' ENTERO ']' .  (10)

	.  reduce 10


state 44
	parametro : tipo ID '[' . ']'  (27)

	']'  shift 48
	.  error


state 45
	bloque : '{' . declaraciones_locales lista_sentencias '}'  (29)
	declaraciones_locales : .  (31)

	.  reduce 31

	declaraciones_locales  goto 49


state 46
	declaracion_funcion : tipo ID '(' parametros ')' bloque .  (22)

	.  reduce 22


state 47
	lista_parametros : lista_parametros ',' parametro .  (25)

	.  reduce 25


state 48
	parametro : tipo ID '[' ']' .  (27)

	.  reduce 27


49: shift/reduce conflict (shift 2, reduce 33) on FLOAT
49: shift/reduce conflict (shift 4, reduce 33) on DOUBLE
state 49
	bloque : '{' declaraciones_locales . lista_sentencias '}'  (29)
	declaraciones_locales : declaraciones_locales . declaracion_variables  (30)
	lista_sentencias : .  (33)

	INT  shift 1
	FLOAT  shift 2
	CHAR  shift 3
	DOUBLE  shift 4
	VOID  shift 5
	STRUCT  shift 6
	ENTERO  reduce 33
	CADENA  reduce 33
	ID  reduce 33
	CARACTER  reduce 33
	FOR  reduce 33
	WHILE  reduce 33
	SWITCH  reduce 33
	BREAK  reduce 33
	DO  reduce 33
	SCAN  reduce 33
	PRINT  reduce 33
	RETURN  reduce 33
	IF  reduce 33
	'-'  reduce 33
	'!'  reduce 33
	'('  reduce 33
	'{'  reduce 33
	'}'  reduce 33
	';'  reduce 33

	declaracion_variables  goto 50
	tipo  goto 22
	tipo_struct  goto 13
	lista_sentencias  goto 51


state 50
	declaraciones_locales : declaraciones_locales declaracion_variables .  (30)

	.  reduce 30


51: shift/reduce conflict (shift 52, reduce 46) on ENTERO
51: shift/reduce conflict (shift 53, reduce 46) on CADENA
51: shift/reduce conflict (shift 54, reduce 46) on ID
51: shift/reduce conflict (shift 55, reduce 46) on CARACTER
51: shift/reduce conflict (shift 56, reduce 46) on FLOAT
51: shift/reduce conflict (shift 57, reduce 46) on DOUBLE
51: shift/reduce conflict (shift 58, reduce 46) on FOR
51: shift/reduce conflict (shift 59, reduce 46) on WHILE
51: shift/reduce conflict (shift 60, reduce 46) on SWITCH
51: shift/reduce conflict (shift 61, reduce 46) on BREAK
51: shift/reduce conflict (shift 62, reduce 46) on DO
51: shift/reduce conflict (shift 63, reduce 46) on SCAN
51: shift/reduce conflict (shift 64, reduce 46) on PRINT
51: shift/reduce conflict (shift 65, reduce 46) on RETURN
51: shift/reduce conflict (shift 66, reduce 46) on IF
51: shift/reduce conflict (shift 67, reduce 46) on '-'
51: shift/reduce conflict (shift 68, reduce 46) on '!'
51: shift/reduce conflict (shift 69, reduce 46) on '('
51: shift/reduce conflict (shift 45, reduce 46) on '{'
51: shift/reduce conflict (shift 70, reduce 46) on '}'
51: shift/reduce conflict (shift 71, reduce 46) on ';'
state 51
	bloque : '{' declaraciones_locales lista_sentencias . '}'  (29)
	lista_sentencias : lista_sentencias . sentencia  (32)
	sentencia_exp : .  (46)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	FOR  shift 58
	WHILE  shift 59
	SWITCH  shift 60
	BREAK  shift 61
	DO  shift 62
	SCAN  shift 63
	PRINT  shift 64
	RETURN  shift 65
	IF  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	'{'  shift 45
	'}'  shift 70
	';'  shift 71

	bloque  goto 72
	sentencia  goto 73
	sentencia_exp  goto 74
	sentencia_if  goto 75
	sentencia_while  goto 76
	sentencia_do  goto 77
	sentencia_switch  goto 78
	sentencia_for  goto 79
	sentencia_break  goto 80
	sentencia_return  goto 81
	sentencia_imprime  goto 82
	sentencia_lee  goto 83
	expresion  goto 84
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 52
	factor : ENTERO .  (100)

	.  reduce 100


state 53
	factor : CADENA .  (103)

	.  reduce 103


state 54
	variable : ID .  (75)
	variable : ID . '[' expresion ']'  (76)
	llamada : ID . '(' argumentos ')'  (107)

	'('  shift 91
	'['  shift 92
	'='  reduce 75
	"+="  reduce 75
	"-="  reduce 75
	"/="  reduce 75
	"*="  reduce 75
	"%="  reduce 75
	"||"  reduce 75
	"&&"  reduce 75
	"=="  reduce 75
	"!="  reduce 75
	'<'  reduce 75
	"<="  reduce 75
	'>'  reduce 75
	">="  reduce 75
	'+'  reduce 75
	'-'  reduce 75
	'*'  reduce 75
	'/'  reduce 75
	'%'  reduce 75
	')'  reduce 75
	']'  reduce 75
	';'  reduce 75
	','  reduce 75


state 55
	factor : CARACTER .  (102)

	.  reduce 102


state 56
	factor : FLOAT .  (101)

	.  reduce 101


state 57
	factor : DOUBLE .  (104)

	.  reduce 104


state 58
	sentencia_for : FOR . '(' expresion ';' expresion ';' sentencia_incremento ')' sentencia  (59)

	'('  shift 93
	.  error


state 59
	sentencia_while : WHILE . '(' expresion ')' sentencia  (50)

	'('  shift 94
	.  error


state 60
	sentencia_switch : SWITCH . '(' ID ')' '{' lista_casos case_default '}'  (53)

	'('  shift 95
	.  error


state 61
	sentencia_break : BREAK . ';'  (60)

	';'  shift 96
	.  error


62: shift/reduce conflict (shift 59, reduce 46) on WHILE
state 62
	sentencia_do : DO . sentencia WHILE '(' expresion ')'  (51)
	sentencia_exp : .  (46)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	FOR  shift 58
	WHILE  shift 59
	SWITCH  shift 60
	BREAK  shift 61
	DO  shift 62
	SCAN  shift 63
	PRINT  shift 64
	RETURN  shift 65
	IF  shift 66
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	'{'  shift 45
	';'  shift 71

	bloque  goto 72
	sentencia  goto 97
	sentencia_exp  goto 74
	sentencia_if  goto 75
	sentencia_while  goto 76
	sentencia_do  goto 77
	sentencia_switch  goto 78
	sentencia_for  goto 79
	sentencia_break  goto 80
	sentencia_return  goto 81
	sentencia_imprime  goto 82
	sentencia_lee  goto 83
	expresion  goto 84
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 63
	sentencia_lee : SCAN . '(' ID ')' ';'  (64)

	'('  shift 98
	.  error


state 64
	sentencia_imprime : PRINT . '(' expresion ')' ';'  (63)

	'('  shift 99
	.  error


state 65
	sentencia_return : RETURN . ';'  (65)
	sentencia_return : RETURN . expresion ';'  (66)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	';'  shift 100
	.  error

	expresion  goto 101
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 66
	sentencia_if : IF . '(' expresion ')' sentencia sentencia_else  (47)

	'('  shift 102
	.  error


state 67
	factor : '-' . expresion  (106)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 103
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 68
	factor : '!' . expresion  (105)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 104
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 69
	factor : '(' . expresion ')'  (99)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 105
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 70
	bloque : '{' declaraciones_locales lista_sentencias '}' .  (29)

	.  reduce 29


state 71
	sentencia_do : ';' .  (52)

	.  reduce 52


state 72
	sentencia : bloque .  (42)

	.  reduce 42


state 73
	lista_sentencias : lista_sentencias sentencia .  (32)

	.  reduce 32


state 74
	sentencia : sentencia_exp .  (34)

	.  reduce 34


state 75
	sentencia : sentencia_if .  (35)

	.  reduce 35


state 76
	sentencia : sentencia_while .  (36)

	.  reduce 36


state 77
	sentencia : sentencia_do .  (37)

	.  reduce 37


state 78
	sentencia : sentencia_switch .  (38)

	.  reduce 38


state 79
	sentencia : sentencia_for .  (39)

	.  reduce 39


state 80
	sentencia : sentencia_break .  (40)

	.  reduce 40


state 81
	sentencia : sentencia_return .  (41)

	.  reduce 41


state 82
	sentencia : sentencia_imprime .  (43)

	.  reduce 43


state 83
	sentencia : sentencia_lee .  (44)

	.  reduce 44


state 84
	sentencia_exp : expresion . ';'  (45)

	';'  shift 106
	.  error


state 85
	expresion : variable . operador_asignacion expresion  (67)
	factor : variable .  (97)

	'='  shift 107
	"+="  shift 108
	"-="  shift 109
	"/="  shift 110
	"*="  shift 111
	"%="  shift 112
	"||"  reduce 97
	"&&"  reduce 97
	"=="  reduce 97
	"!="  reduce 97
	'<'  reduce 97
	"<="  reduce 97
	'>'  reduce 97
	">="  reduce 97
	'+'  reduce 97
	'-'  reduce 97
	'*'  reduce 97
	'/'  reduce 97
	'%'  reduce 97
	')'  reduce 97
	']'  reduce 97
	';'  reduce 97
	','  reduce 97

	operador_asignacion  goto 113


86: shift/reduce conflict (shift 114, reduce 68) on "||"
86: shift/reduce conflict (shift 115, reduce 68) on "&&"
86: shift/reduce conflict (shift 116, reduce 68) on "=="
86: shift/reduce conflict (shift 117, reduce 68) on "!="
86: shift/reduce conflict (shift 118, reduce 68) on '<'
86: shift/reduce conflict (shift 119, reduce 68) on "<="
86: shift/reduce conflict (shift 120, reduce 68) on '>'
86: shift/reduce conflict (shift 121, reduce 68) on ">="
state 86
	expresion : expresion_simple .  (68)
	expresion_simple : expresion_simple . operador_relacional operando  (77)
	expresion_simple : expresion_simple . operador_logico operando  (78)

	"||"  shift 114
	"&&"  shift 115
	"=="  shift 116
	"!="  shift 117
	'<'  shift 118
	"<="  shift 119
	'>'  shift 120
	">="  shift 121
	'+'  reduce 68
	'-'  reduce 68
	'*'  reduce 68
	'/'  reduce 68
	'%'  reduce 68
	')'  reduce 68
	']'  reduce 68
	';'  reduce 68
	','  reduce 68

	operador_relacional  goto 122
	operador_logico  goto 123


87: shift/reduce conflict (shift 124, reduce 79) on '+'
87: shift/reduce conflict (shift 125, reduce 79) on '-'
state 87
	expresion_simple : operando .  (79)
	operando : operando . operador_adicion termino  (88)

	'+'  shift 124
	'-'  shift 125
	"||"  reduce 79
	"&&"  reduce 79
	"=="  reduce 79
	"!="  reduce 79
	'<'  reduce 79
	"<="  reduce 79
	'>'  reduce 79
	">="  reduce 79
	'*'  reduce 79
	'/'  reduce 79
	'%'  reduce 79
	')'  reduce 79
	']'  reduce 79
	';'  reduce 79
	','  reduce 79

	operador_adicion  goto 126


88: shift/reduce conflict (shift 127, reduce 89) on '*'
88: shift/reduce conflict (shift 128, reduce 89) on '/'
88: shift/reduce conflict (shift 129, reduce 89) on '%'
state 88
	operando : termino .  (89)
	termino : termino . operador_mul factor  (92)

	'*'  shift 127
	'/'  shift 128
	'%'  shift 129
	"||"  reduce 89
	"&&"  reduce 89
	"=="  reduce 89
	"!="  reduce 89
	'<'  reduce 89
	"<="  reduce 89
	'>'  reduce 89
	">="  reduce 89
	'+'  reduce 89
	'-'  reduce 89
	')'  reduce 89
	']'  reduce 89
	';'  reduce 89
	','  reduce 89

	operador_mul  goto 130


state 89
	termino : factor .  (93)

	.  reduce 93


state 90
	factor : llamada .  (98)

	.  reduce 98


state 91
	llamada : ID '(' . argumentos ')'  (107)
	argumentos : .  (109)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	')'  reduce 109

	expresion  goto 131
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90
	argumentos  goto 132
	lista_argumentos  goto 133


state 92
	variable : ID '[' . expresion ']'  (76)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 134
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 93
	sentencia_for : FOR '(' . expresion ';' expresion ';' sentencia_incremento ')' sentencia  (59)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 135
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 94
	sentencia_while : WHILE '(' . expresion ')' sentencia  (50)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 136
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 95
	sentencia_switch : SWITCH '(' . ID ')' '{' lista_casos case_default '}'  (53)

	ID  shift 137
	.  error


state 96
	sentencia_break : BREAK ';' .  (60)

	.  reduce 60


state 97
	sentencia_do : DO sentencia . WHILE '(' expresion ')'  (51)

	WHILE  shift 138
	.  error


state 98
	sentencia_lee : SCAN '(' . ID ')' ';'  (64)

	ID  shift 139
	.  error


state 99
	sentencia_imprime : PRINT '(' . expresion ')' ';'  (63)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 140
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 100
	sentencia_return : RETURN ';' .  (65)

	.  reduce 65


state 101
	sentencia_return : RETURN expresion . ';'  (66)

	';'  shift 141
	.  error


state 102
	sentencia_if : IF '(' . expresion ')' sentencia sentencia_else  (47)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 142
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 103
	factor : '-' expresion .  (106)

	.  reduce 106


state 104
	factor : '!' expresion .  (105)

	.  reduce 105


state 105
	factor : '(' expresion . ')'  (99)

	')'  shift 143
	.  error


state 106
	sentencia_exp : expresion ';' .  (45)

	.  reduce 45


state 107
	operador_asignacion : '=' .  (69)

	.  reduce 69


state 108
	operador_asignacion : "+=" .  (70)

	.  reduce 70


state 109
	operador_asignacion : "-=" .  (71)

	.  reduce 71


state 110
	operador_asignacion : "/=" .  (73)

	.  reduce 73


state 111
	operador_asignacion : "*=" .  (72)

	.  reduce 72


state 112
	operador_asignacion : "%=" .  (74)

	.  reduce 74


state 113
	expresion : variable operador_asignacion . expresion  (67)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	expresion  goto 144
	variable  goto 85
	expresion_simple  goto 86
	operando  goto 87
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 114
	operador_logico : "||" .  (81)

	.  reduce 81


state 115
	operador_logico : "&&" .  (80)

	.  reduce 80


state 116
	operador_relacional : "==" .  (86)

	.  reduce 86


state 117
	operador_relacional : "!=" .  (87)

	.  reduce 87


state 118
	operador_relacional : '<' .  (84)

	.  reduce 84


state 119
	operador_relacional : "<=" .  (82)

	.  reduce 82


state 120
	operador_relacional : '>' .  (85)

	.  reduce 85


state 121
	operador_relacional : ">=" .  (83)

	.  reduce 83


state 122
	expresion_simple : expresion_simple operador_relacional . operando  (77)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	variable  goto 145
	operando  goto 146
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 123
	expresion_simple : expresion_simple operador_logico . operando  (78)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	variable  goto 145
	operando  goto 147
	termino  goto 88
	factor  goto 89
	llamada  goto 90


state 124
	operador_adicion : '+' .  (90)

	.  reduce 90


state 125
	operador_adicion : '-' .  (91)

	.  reduce 91


state 126
	operando : operando operador_adicion . termino  (88)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	variable  goto 145
	termino  goto 148
	factor  goto 89
	llamada  goto 90


state 127
	operador_mul : '*' .  (94)

	.  reduce 94


state 128
	operador_mul : '/' .  (95)

	.  reduce 95


state 129
	operador_mul : '%' .  (96)

	.  reduce 96


state 130
	termino : termino operador_mul . factor  (92)

	ENTERO  shift 52
	CADENA  shift 53
	ID  shift 54
	CARACTER  shift 55
	FLOAT  shift 56
	DOUBLE  shift 57
	'-'  shift 67
	'!'  shift 68
	'('  shift 69
	.  error

	variable  goto 145
	factor  goto 149
	llamada  goto 90


state 131
	lista_argumentos : expresion .  (111)

	.  reduce 111


state 132
	llamada : ID '(' argumentos . ')'  (107)

	')'  shift 150
	.  error


state 133
	argumentos : lista_argumentos .  (108)
	lista_argumentos : lista_argumentos . ',' expresion  (110)

	','  shift 151
	')'  reduce 108


state 134
	variable : ID '[' expresion . ']'  (76)

	']'  shift 152
	.  error


state 135
	sentencia_for : FOR '(' expresion . ';' expresion ';' sentencia_incremento ')' sentencia  (59)

	';'  shift 153
	.  error


state 136
	sentencia_while : WHILE '(' expresion . ')' sentencia  (50)

	')'  shift 154
	.  error


state 137
	sentencia_switch : SWITCH '(' ID . ')' '{' lista_casos case_default '}'  (53)

	')'  shift 155
	.  error


state 138
	sentencia_do : DO sentencia WHILE . '(' expresion ')'  (51)

	'('  shift 156
	.  error


state 139
	sentencia_lee : SCAN '(' ID . ')' ';'  (64)

	')'  shift 157
	.  error


state 140
	sentencia_imprime : PRINT '(' expresion . ')' ';'  (63)

	')'  shift 158
	.  error


state 141
	sentencia_return : RETURN expresion ';' .  (66)

	.  reduce 66


state 142
	sentencia_if : IF '(' expresion . ')' sentencia sentencia_else  (47)

	')'  shift 159
	.  error


state 143
	factor : '(' expresion ')' .  (99)

	.  reduce 99

